# ziglike

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build.zig  build.zig.zon  flake.nix
doc/: opt.md  res.md  slice.md
include/: ziglike.h
include/ziglike/: anystatus.h  defer.h  enumerate.h  factory.h  joined_slice.h  opt.h  res.h  slice.h  status.h  stdmem.h  try.h  zigstdint.h
include/ziglike/detail/: abort.h  is_container.h  isinstance.h
include/ziglike/formatters/: opt.h  res.h  slice.h
tests/: doctest.h  test_header.h  testing_types.h
tests/defer/: defer.cpp
tests/enumerate/: enumerate.cpp
tests/factory/: factory.cpp
tests/joined_slice/: joined_slice.cpp
tests/opt/: opt.cpp
tests/res/: res.cpp
tests/slice/: slice.cpp
tests/status/: status.cpp
tests/stdmem/: stdmem.cpp
